fix: Reduce height and width of scrollbar-thumb

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -101,8 +101,8 @@
 }
 
 ::-webkit-scrollbar {
-  width: 9px;
-  height: 10px;
+  width: 7px;
+  height: 7px;
 }
 
 ::-webkit-scrollbar-thumb {
